--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/mimick_vendor
-	previous = 
-	base = 304eed2
+	previous = 304eed2
+	base = 987b63d
 	trim = 
 	trimbase = 
