--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/mimick_vendor
-	previous = 
-	base = cfc6539
+	previous = cfc6539
+	base = 9b4d466
 	trim = 
 	trimbase = 
