--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/mimick_vendor
-	previous = 
-	base = 79b58b4
+	previous = 79b58b4
+	base = 5017c47
 	trim = 
 	trimbase = 
